--- a/pres/future.tex
+++ b/pres/future.tex
@@ -1,10 +1,28 @@
 \begin{frame}
-  \frametitle{Conclusion}
-        We showed many things.
-        \begin{itemize}
-                \item Cats are peculiar
-                \item Blue and Orange are fierce colors
-                \item Math can be rendered nicely
-                \item Cite your sources
-        \end{itemize}
+  \frametitle{Future Work}
+  We have shown that PyRe allows the Cyclus to simulate a simple pyroprocessing scenario future work includes:
+  \begin{itemize}
+     \item Increase scenario complexity - test shadow diversion
+     \item Improve user input
+     \begin{itemize}
+      	\item Allow user-defined equations as input
+     \end{itemize}
+     \item Chemistry detail
+     \item Cite your sources
+  \end{itemize}
+\begin{block}{Uses of PyRe:}
+	In the beginning we marked the following objectives:
+\begin{itemize}
+	\item What is the effect of introducing pyroprocessing plants in the fuel cycle?
+	\item How do various facility designs affect throughput and efficiency?
+	\item Where in a pyroprocessing plant will monitoring most 
+	effectively detect material diversion?
+\end{itemize}
+\end{block}
+\end{frame}
+
+\begin{frame}
+\frametitle{Diversion Algorithm}
+The first two questions can be answered through the addition of PyRe to Cyclus. However, to address the last we must 
+employ an algorithm to analyze small differences between multiple simulations.
 \end{frame}
