--- a/pres/motivation.tex
+++ b/pres/motivation.tex
@@ -1,25 +1,21 @@
 \begin{frame}
-  \frametitle{An Image}
-  % a comment
-  \begin{figure}[htbp!]
-    \begin{center}
-      \includegraphics[height=4cm]{./images/kitten}
-    \end{center}
-          \caption{A caption describing the image. \cite{lastname_firstword_1900}.}
-    \label{fig:kittenfigure}
-  \end{figure}
+  \frametitle{Motivation}
+ \begin{block}{What is the goal?}
+ 	PyRe will be used to answer the following questions
+ 	\begin{itemize}
+ 		\item What is the effect of introducing pyroprocessing plants in the fuel cycle?
+ 		\item How do various facility designs affect throughput and efficiency?
+ 		\item Where in a pyroprocessing plant will monitoring most 
+ 		effectively detect material diversion?
+ 	\end{itemize}
+\end{block}
+The first two can be directly answered by the archetype. The third requires data analysis via
+diversion algorithms.	
 \end{frame}
 
 \begin{frame}
-  \frametitle{A Table}
-        Frames (slides) can have ``blocks.'' 
-        \begin{block}{This one is about a cat}
-                A cat in a hat.
-        \end{block}
-        \begin{block}{A cat}
-                In a hat.
-
-                \includegraphics[height=0.2\textheight]{./images/catinhat}
-        \end{block}
-        
+  \frametitle{Diversion}
+        \begin{figure}
+        	\includegraphics[width=0.9\linewidth]{diversion1}
+        \end{figure}
 \end{frame}
