--- a/pres/results.tex
+++ b/pres/results.tex
@@ -1,22 +1,52 @@
 \begin{frame}
-  \frametitle{Average Sim}
-  % a comment
-        Those are the Illini Colors. Use them like you see them in Figure 
-        \ref{fig:fierce}.
-  \begin{figure}[htbp!]
-    \begin{center}
-      \includegraphics[height=4cm]{./images/fierce}
-    \end{center}
-          \caption{Kristofer Hivju is pretty serious about this color palette \cite{lastname_firstword_1900}.}
-    \label{fig:fierce}
+\frametitle{Average Sim}
+\begin{columns}
+	\begin{column}{.5\textwidth}
+		\begin{figure}
+			\centering
+			\includegraphics[width=0.9\linewidth]{timeseries-prod}
+			\caption{Product time series of a simple simulation.}
+			\label{fig:timeseries-prod}
+		\end{figure}
+	\end{column}
+	\begin{column}{.5\textwidth}
+		\begin{figure}
+			\centering
+			\includegraphics[width=0.9\linewidth]{timeseries-waste}
+			\caption{Waste time series of a simple simulation.}
+			\label{fig:timeseries-waste}
+		\end{figure}
+	\end{column}
+\end{columns} 
+\end{frame}
+
+\begin{frame}
+\frametitle{Isotopic Composition of Waste Streams}
+  \begin{figure}
+  	\centering
+  	\includegraphics[width=0.9\linewidth]{avg-isotope-comp}
+  	\caption{Isotopic Composition of Average Waste Streams}
+  	\label{fig:avg-isotope-comp}
   \end{figure}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Edge Case Simulations}
+\frametitle{Current Diversion}
+  \begin{figure}
+  	\centering
+  	\includegraphics[width=0.9\linewidth]{current-isotope-comp}
+  	\caption{Isotopic Composition of Current Diverted Waste Streams}
+  	\label{fig:current-isotope-comp}
+  \end{figure}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Current Diversion}
+  \frametitle{Isotopic Range}
+  \begin{figure}
+  	\centering
+  	\includegraphics[width=0.9\linewidth]{isotopic-comp-range}
+  	\caption{Range of Isotopic Values}
+  	\label{fig:isotopic-range}
+  \end{figure}
 \end{frame}
 
