adding some graphs

--- a/pres/methods.tex
+++ b/pres/methods.tex
@@ -31,7 +31,7 @@
     \end{block}
 	\begin{figure}
 		\centering
-		\includegraphics[width=0.9\linewidth]{cyclus-graph}
+		\includegraphics[width=0.6\linewidth]{Cyclus_graph}
 	\end{figure}
 \end{frame}
 
@@ -81,14 +81,14 @@
 		\end{figure}
 		\begin{figure} 
 			\centering
-			\includegraphics[width=0.9\linewidth]{refining}
+			\includegraphics[width=0.9\linewidth]{reduction}
 			\label{fig:refining}
 		\end{figure}
 	\end{column}
 	\begin{column}{.5\textwidth}
 		\begin{figure}
 			\centering
-			\includegraphics[width=0.9\linewidth]{reduction}
+			\includegraphics[width=0.9\linewidth]{refining}
 			\label{fig:reduction}
 		\end{figure}
 		\begin{figure} 
