--- a/pres/results.tex
+++ b/pres/results.tex
@@ -4,7 +4,7 @@
 	\begin{column}{.5\textwidth}
 		\begin{figure}
 			\centering
-			\includegraphics[width=0.9\linewidth]{timeseries-prod}
+			\includegraphics[width=\linewidth]{timeseries-prod}
 			\caption{Product time series of a simple simulation.}
 			\label{fig:timeseries-prod}
 		\end{figure}
@@ -12,7 +12,7 @@
 	\begin{column}{.5\textwidth}
 		\begin{figure}
 			\centering
-			\includegraphics[width=0.9\linewidth]{timeseries-waste}
+			\includegraphics[width=\linewidth]{timeseries-waste}
 			\caption{Waste time series of a simple simulation.}
 			\label{fig:timeseries-waste}
 		\end{figure}
