--- a/pres/arfc-pres.tex
+++ b/pres/arfc-pres.tex
@@ -26,7 +26,7 @@
 \usepackage{booktabs} % nice rules for tables
 \usepackage{microtype} % if using PDF
 \usepackage{bigints}
-\usepackage{minted}
+%\usepackage{minted}
 
 \newcommand{\units}[1] {\:\text{#1}}%
 \newcommand{\SN}{S$_N$}%{S$_\text{N}$}%{$S_N$}%
