--- a/pres/arfc-pres.tex
+++ b/pres/arfc-pres.tex
@@ -7,11 +7,11 @@
 \documentclass[9pt]{beamer}
 \usetheme[white]{Illinois}
 %\title[short title]{long title}
-\title[Short Title]{A Very Very Long Title for a Presentation about Cats}
+\title[PyRe]{PyRe: A Cyclus Pyroprocessing Archetype}
 %\subtitle[short subtitle]{long subtitle}
-\subtitle[Short SubTitle]{Mostly Kittens}
+%\subtitle[Short SubTitle]{Mostly Kittens}
 %\author[short name]{long name}
-\author[Your Name]{Your Name\\Advanced Reactors and Fuel Cycles Group}
+\author[Greg Westphal]{Greg Westphal\\Advanced Reactors and Fuel Cycles Group}
 %\date[short date]{long date}
 \date[04.01.2100]{April 1, 2100}
 %\institution[short name]{long name}
