--- a/pres/future.tex
+++ b/pres/future.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{Future Work}
-  We have shown that PyRe allows the Cyclus to simulate a simple pyroprocessing scenario future work includes:
+  We have shown that PyRe allows Cyclus to simulate a simple pyroprocessing scenario. Future work includes:
   \begin{itemize}
      \item Increase scenario complexity - test shadow diversion
      \item Improve user input
