--- a/pres/methods.tex
+++ b/pres/methods.tex
@@ -57,6 +57,11 @@
 				\item Time step $\geq$ 1 month
 				\item Streams must be in a
 				trade-able form.
+				\item Parameters are constant for the simulation.
+				\begin{itemize}
+					\item Here is where I would mention the toolkit.
+				\end{itemize}
+				\item Diversion detection must be added after.
 			\end{itemize}
 		\end{block}
 	\end{column}
