--- a/pres/methods.tex
+++ b/pres/methods.tex
@@ -32,6 +32,7 @@
 	\begin{figure}
 		\centering
 		\includegraphics[width=0.6\linewidth]{Cyclus_graph}
+		\caption{Cyclus Archetype framework and API.}
 	\end{figure}
 \end{frame}
 
@@ -59,7 +60,7 @@
 				trade-able form.
 				\item Parameters are constant for the simulation.
 				\begin{itemize}
-					\item Here is where I would mention the toolkit.
+					\item Equation input toolkit under development.
 				\end{itemize}
 				\item Diversion detection must be added after.
 			\end{itemize}
@@ -69,6 +70,7 @@
 		\begin{figure}
 			\centering
 			\includegraphics[width=0.9\linewidth]{flowchart}
+			\caption{PyRe material flowchart.}
 			\label{fig:cyclus}
 		\end{figure}
 	\end{column}
@@ -82,23 +84,27 @@
 		\begin{figure} 
 			\centering
 			\includegraphics[width=0.9\linewidth]{volox}
+			\caption{Voloxidation material balance area.}
 			\label{fig:volox}
 		\end{figure}
 		\begin{figure} 
 			\centering
 			\includegraphics[width=0.9\linewidth]{reduction}
-			\label{fig:refining}
+			\caption{Reduction material balance area.}
+			\label{fig:reduction}
 		\end{figure}
 	\end{column}
 	\begin{column}{.5\textwidth}
 		\begin{figure}
 			\centering
 			\includegraphics[width=0.9\linewidth]{refining}
-			\label{fig:reduction}
+			\caption{Refining material balance area.}
+			\label{fig:refining}
 		\end{figure}
 		\begin{figure} 
 			\centering
-			\includegraphics[width=0.9\linewidth]{winning}
+			\includegraphics[width=0.8\linewidth]{winning}
+			\caption{Winning material balance area.}
 			\label{fig:winning}
 		\end{figure}
 	\end{column}
