--- a/pres/motivation.tex
+++ b/pres/motivation.tex
@@ -16,6 +16,8 @@ diversion algorithms.
 \begin{frame}
   \frametitle{Diversion}
         \begin{figure}
+        	\centering
         	\includegraphics[width=0.9\linewidth]{diversion1}
+        	\caption{Diversion detection methods within Cyclus.}
         \end{figure}
 \end{frame}
