--- a/pres/future.tex
+++ b/pres/future.tex
@@ -37,7 +37,7 @@
 		\begin{figure}
 		\centering
 		\includegraphics[width=\linewidth]{cusum-example}
-		\caption{Example of a cumulative sum alarm from Basseville.}
+		\caption{Example of a cumulative sum alarm from Basseville. \ref{basseville}}
 		\label{fig:timeseries-waste}
 		\end{figure}
 	\end{column}
