--- a/pres/methods.tex
+++ b/pres/methods.tex
@@ -32,7 +32,7 @@
 	\begin{figure}
 		\centering
 		\includegraphics[width=0.6\linewidth]{Cyclus_graph}
-		\caption{Cyclus Archetype framework and API.}
+		\caption{Cyclus Archetype framework and API\ref{cyclus-dev}.}
 	\end{figure}
 \end{frame}
 
@@ -70,7 +70,7 @@
 		\begin{figure}
 			\centering
 			\includegraphics[width=0.9\linewidth]{flowchart}
-			\caption{PyRe material flowchart.}
+			\caption{PyRe material flowchart \ref{borelli}.}
 			\label{fig:cyclus}
 		\end{figure}
 	\end{column}
@@ -84,13 +84,13 @@
 		\begin{figure} 
 			\centering
 			\includegraphics[width=0.9\linewidth]{volox}
-			\caption{Voloxidation material balance area.}
+			\caption{Voloxidation material balance area \ref{jupin}.}
 			\label{fig:volox}
 		\end{figure}
 		\begin{figure} 
 			\centering
 			\includegraphics[width=0.9\linewidth]{reduction}
-			\caption{Reduction material balance area.}
+			\caption{Reduction material balance area \ref{kaeri}.}
 			\label{fig:reduction}
 		\end{figure}
 	\end{column}
@@ -98,7 +98,7 @@
 		\begin{figure}
 			\centering
 			\includegraphics[width=0.9\linewidth]{refining}
-			\caption{Refining material balance area.}
+			\caption{Refining material balance area \ref{kaeri}.}
 			\label{fig:refining}
 		\end{figure}
 		\begin{figure} 
