--- a/pres/motivation.tex
+++ b/pres/motivation.tex
@@ -18,6 +18,6 @@ diversion algorithms.
         \begin{figure}
         	\centering
         	\includegraphics[width=0.9\linewidth]{diversion1}
-        	\caption{Diversion detection methods within Cyclus.}
+        	\caption{Diversion detection methods within Cyclus \ref{cyclus-dev}.}
         \end{figure}
 \end{frame}
