--- a/pres/methods.tex
+++ b/pres/methods.tex
@@ -1,7 +1,7 @@
 \begin{frame}
   \frametitle{Methodology}
 \begin{columns}
-	\begin{column}{.55\textwidth}
+	\begin{column}{.45\textwidth}
 		\begin{block}{How does PyRe work?} 
 			PyRe does the following with an input stream and facility configuration parameters: 
 			\begin{itemize}
@@ -13,11 +13,12 @@
 			\end{itemize}
 		\end{block}
 	\end{column}
-	\begin{column}{.45\textwidth}
+	\begin{column}{.55\textwidth}
 		\begin{figure}
 			\centering
-			\includegraphics[width=0.9\linewidth]{cyclus}
-			\label{fig:cyclus}
+			\includegraphics[width=0.95\linewidth]{flowchart}
+			\caption{PyRe material flowchart \ref{borelli}.}
+			\label{fig:flowchart}
 		\end{figure}
 	\end{column}
 \end{columns} 
@@ -69,8 +70,7 @@
 	\begin{column}{.55\textwidth}
 		\begin{figure}
 			\centering
-			\includegraphics[width=0.9\linewidth]{flowchart}
-			\caption{PyRe material flowchart \ref{borelli}.}
+			\includegraphics[width=0.9\linewidth]{cyclus}
 			\label{fig:cyclus}
 		\end{figure}
 	\end{column}
