--- a/pres/motivation.tex
+++ b/pres/motivation.tex
@@ -1,5 +1,11 @@
 \begin{frame}
   \frametitle{Motivation}
+  \begin{block}{Why model Pyroprocessing?}
+  	\begin{itemize}
+  		\item No commercial plants.
+  		\item Safeguard by design.
+  	\end{itemize}
+  \end{block}
  \begin{block}{What is the goal?}
  	PyRe will be used to answer the following questions
  	\begin{itemize}
