--- a/pres/methods.tex
+++ b/pres/methods.tex
@@ -32,8 +32,8 @@
     \end{block}
 	\begin{figure}
 		\centering
-		\includegraphics[width=0.6\linewidth]{Cyclus_graph}
-		\caption{Cyclus Archetype framework and API\ref{cyclus-dev}.}
+		\includegraphics[width=0.6\linewidth]{lanl-fuel-cycle.png}
+		\caption{Example fuel cycle\ref{2011_zhou}.}
 	\end{figure}
 \end{frame}
 
@@ -78,35 +78,38 @@
 \end{frame}
 
 \begin{frame}
-\frametitle{Subprocesses}
-\begin{columns}
-	\begin{column}{.5\textwidth}
+\frametitle{Subprocesses - Voloxidation}
 		\begin{figure} 
 			\centering
 			\includegraphics[width=0.9\linewidth]{volox}
 			\caption{Voloxidation material balance area \ref{jupin}.}
 			\label{fig:volox}
 		\end{figure}
+\end{frame}
+\begin{frame}
+\frametitle{Subprocesses - Electroreduction}
 		\begin{figure} 
 			\centering
 			\includegraphics[width=0.9\linewidth]{reduction}
 			\caption{Reduction material balance area \ref{kaeri}.}
 			\label{fig:reduction}
 		\end{figure}
-	\end{column}
-	\begin{column}{.5\textwidth}
+\end{frame}
+\begin{frame}
+\frametitle{Subprocesses - Electrorefining}
 		\begin{figure}
 			\centering
 			\includegraphics[width=0.9\linewidth]{refining}
 			\caption{Refining material balance area \ref{kaeri}.}
 			\label{fig:refining}
 		\end{figure}
+\end{frame}
+\begin{frame}
+\frametitle{Subprocesses - Electrowinning}
 		\begin{figure} 
 			\centering
 			\includegraphics[width=0.8\linewidth]{winning}
 			\caption{Winning material balance area.}
 			\label{fig:winning}
 		\end{figure}
-	\end{column}
-\end{columns} 
 \end{frame}
