--- a/pres/results.tex
+++ b/pres/results.tex
@@ -1,5 +1,17 @@
 \begin{frame}
 \frametitle{Average Sim}
+The first simulation is an example facility with the following input values:
+\begin{itemize}
+	\item Temperature -- 900 $^\circ$ C
+	\item Pressure -- 500 mTorr
+	\item Rotation -- 100 rpm
+	\item Current -- 8 A
+	\item Time -- 1 hr
+\end{itemize}
+\end{frame}
+
+\begin{frame}
+\frametitle{Average Sim - Results}
 \begin{columns}
 	\begin{column}{.5\textwidth}
 		\begin{figure}
