--- a/pres/bibliography.bib
+++ b/pres/bibliography.bib
@@ -1,10 +1,91 @@
 
-@article{lastname_firstword_1900,
-	title = {The title of a great paper about kittens.},
-	shorttitle = {Kittens},
-	url = {http://www.sciencedirect.com.ezproxy.library.wisc.edu/science/article/pii/S0169772211000568},
-	journal = {Journal of Cats and Kittens},
-	author = {Mistopheles, Mr.},
-	year = {2011}
+@article{borrelli_approaches_2017,
+	title = {Approaches to a {Practical} {Systems} {Assessment} for {Safeguardability} of {Advanced} {Nuclear} {Fuel} {Cycles}},
+	volume = {197},
+	issn = {0029-5450},
+	url = {http://www.tandfonline.com/doi/abs/10.1080/00295450.2016.1273713},
+	doi = {10.1080/00295450.2016.1273713},
+	abstract = {Many nations are expanding or initiating nuclear energy programs as part of a national energy portfolio. Transitioning to advanced nuclear energy systems improves sustainability and promotes energy independence. These advanced nuclear energy systems also must be shown to enhance safety, safeguards, and security in order to be realistically deployed. This is of particular concern to non–nuclear weapons states, to assure compliance with International Atomic Energy Agency treaty obligations. Consequently, the relatively new research area of safeguardability addresses how to integrate goals for safety, safeguards, and security as part of a design strategy for an advanced fuel cycle. This paper presents an overall set of principles that form the foundation of a comprehensive safeguardability methodology, including the quantitative modeling studies derived therein. Results show an approach for characterizing used fuel, functional components to engineering design for nuclear materials handling facilities, and repository analysis. We conclude with an argument for the necessity of an integrative, systems assessment approach to the safeguardability of an advanced fuel cycle.},
+	number = {3},
+	journal = {Nuclear Technology},
+	author = {Borrelli, R. A. and Ahn, Joonhang and Hwang, Yongsoo},
+	month = mar,
+	year = {2017},
+	keywords = {advanced fuel cycle analysis, pyroprocessing, Safeguardability},
+	pages = {248--264},
+	file = {Borrelli et al_2017_Approaches to a Practical Systems Assessment for Safeguardability of Advanced_annotated.pdf:/home/gtw2/Zotero/storage/YC4QLV5C/Borrelli et al_2017_Approaches to a Practical Systems Assessment for Safeguardability of Advanced_annotated.pdf:application/pdf;Borrelli et al_2017_Approaches to a Practical Systems Assessment for Safeguardability of Advanced.pdf:/home/gtw2/Zotero/storage/BXGBDNZK/Borrelli et al_2017_Approaches to a Practical Systems Assessment for Safeguardability of Advanced.pdf:application/pdf;Snapshot:/home/gtw2/Zotero/storage/BIYG2ZLR/00295450.2016.html:text/html}
 },
+
+@article{lee_advanced_2008,
+	title = {Advanced {Electrorefining} {Process} at {KAERI}},
+	url = {http://www.iaea.org/inis/collection/NCLCollectionStore/_Public/40/032/40032685.pdf},
+	abstract = {In order to enhance the throughput of a pyroprocessing in which electrochemical processes are
+mostly engaged, the design of a continuous concept is required. The graphite cathode in the electrorefiner
+enables the uranium deposit on the cathodes to be stripped off spontaneously, resulting in a continuous
+reaction. The collected uranium deposits at the bottom of the inner cone of the reactor are transferred by a
+conveyer. The residuals in the anode basket after the uranium is depleted are noble metals. These are also
+collected at the bottom of the outer shell of the reactor, and conveyed from the reactor for a further
+treatment. This work addresses the design of the electrorefiner for a continuous operation. The behavior
+of particles such as uranium dendrites or noble metals was analyzed to achieve the proper operating
+conditions. The operating conditions for the cathode processor in which molten salt is distilled were also
+investigated.},
+	urldate = {2018-03-09},
+	journal = {ATALANTE 2008},
+	author = {Lee, Hansoo and Lee, Jong Hyun and Park, Sung Bin and Lee, Yoon Sang and Kim, Eung Ho and Park, Sung Won},
+	month = may,
+	year = {2008},
+	file = {40032685.pdf:/home/gtw2/Zotero/storage/FJ2GXPWT/40032685.pdf:application/pdf}
+},
+
+@techreport{jubin_spent_2009,
+	title = {Spent {Fuel} {Reprocessing}},
+	url = {http://www.cresp.org/NuclearChemCourse/monographs/07_Jubin_Introduction%20to%20Nuclear%20Fuel%20Cycle%20Separations%20-%20Final%20rev%202_3_2_09.pdf},
+	urldate = {2018-05-04},
+	institution = {Oak Ridge National Lab. (ORNL), Oak Ridge, TN (United States)},
+	author = {Jubin, Robert},
+	year = {2009},
+	file = {07_Jubin_Introduction to Nuclear Fuel Cycle Separations - Final rev 2_3_2_09.pdf:/home/gtw2/Zotero/storage/AVVWXH3N/07_Jubin_Introduction to Nuclear Fuel Cycle Separations - Final rev 2_3_2_09.pdf:application/pdf}
+},
+
+@misc{zhou_model_2011,
+	title = {Model and {Simulation} {Code} {Development} for {Actinide}-{Containing} {Fuels}},
+	url = {https://permalink.lanl.gov/object/tr?what=info:lanl-repo/lareport/LA-UR-11-01831},
+	abstract = {Actinide recycle into a fast-spectrum reactor has been found to be an effective way
+to manage the disposition of transuranic isotopes, such as Americium and
+Neptunium, which have long half-lives and dominate the calculated long-term dose
+associated with releases from repositories. In this presentation, the code
+development and irradiation tests regarding the metallic actinide fuels were
+reviewed and compared. The models for metallic actinide fuels were analyzed and
+the metallic actinide fuels properties were summarized. Based on the above review,
+the project research plans were given. We need to develop BISON-OXIDE and
+BISON-METAL fuel performance codes, develop constitutive models and simulation
+codes to predict actinide fuels materials' properties, and verify the fuel properties
+and performance with the existing data and test results. Successful completion of
+this project will facilitate an improved understanding of fuel behavior within a
+closed fuel cycle.
+This presentation is intended for a research team meeting and discussion at INL.},
+	urldate = {2018-11-09},
+	author = {Zhou, Wenzhong},
+	month = mar,
+	year = {2011},
+	file = {tr.pdf:/home/gtw2/Zotero/storage/XN3LZCAY/tr.pdf:application/pdf}
+},
+
+@book{basseville_detection_1993,
+	series = {Prentice {Hall} information and system sciences series},
+	title = {Detection of {Abrupt} {Changes}: {Theory} and {Application}},
+	isbn = {0-13-126780-9},
+	url = {ftp://ftp.irisa.fr/local/as/mb/k11.pdf},
+	language = {English},
+	urldate = {2018-11-09},
+	publisher = {Prentice Hall},
+	author = {Basseville, Michele and Nikiforov, Igor V.},
+	month = apr,
+	year = {1993},
+	file = {Basseville.pdf:/home/gtw2/Zotero/storage/7Q9JS3DM/Basseville.pdf:application/pdf}
+},
+
+
+
+
 
