--- a/pres/future.tex
+++ b/pres/future.tex
@@ -7,7 +7,7 @@
      \begin{itemize}
       	\item Allow user-defined equations as input
      \end{itemize}
-     \item Chemistry detail
+     \item Chemistry first principles
   \end{itemize}
 \begin{block}{Uses of PyRe:}
 	In the beginning we marked the following objectives:
@@ -37,8 +37,8 @@
 		\begin{figure}
 		\centering
 		\includegraphics[width=\linewidth]{cusum-example}
-		\caption{Example of a cumulative sum alarm from Basseville. \ref{basseville}}
-		\label{fig:timeseries-waste}
+		\caption{Example of a cumulative sum alarm \cite{basseville_detection_1993}.}
+		\label{fig:cusum}
 		\end{figure}
 	\end{column}
 \end{columns} 
