--- a/pres/arfc-pres.tex
+++ b/pres/arfc-pres.tex
@@ -34,7 +34,13 @@
 %I need some complimentary error funcitons... 
 \DeclareMathOperator{\erfc}{erfc}
 %page numbers
-\setbeamertemplate{footline}[page number]
+\addtobeamertemplate{navigation symbols}{}{%
+	\usebeamerfont{footline}%
+	\usebeamercolor[fg]{footline}%
+	\hspace{1em}%
+	\insertframenumber/\inserttotalframenumber
+}
+\setbeamertemplate{footline}[frame number]
 \setbeamertemplate{caption}[numbered]
 %Those icons in the references are terrible looking
 \setbeamertemplate{bibliography item}[text]
@@ -99,7 +105,7 @@
 \begin{frame}[allowframebreaks]
   \frametitle{References}
   \bibliographystyle{plain}
-  {\footnotesize \bibliography{bibliography.bib} }
+  {\footnotesize \bibliography{bibliography} }
 
 \end{frame}
 
