--- a/pres/methods.tex
+++ b/pres/methods.tex
@@ -17,7 +17,7 @@
 		\begin{figure}
 			\centering
 			\includegraphics[width=0.95\linewidth]{flowchart}
-			\caption{PyRe material flowchart \ref{borelli}.}
+			\caption{PyRe material flowchart \cite{borrelli_approaches_2017}.}
 			\label{fig:flowchart}
 		\end{figure}
 	\end{column}
@@ -25,34 +25,17 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{Cyclus}
-    \begin{block}{What is Cyclus?}
-    	Cyclus is a modular agent based fuel cycle simulator for tracking commodity transactions
-    	between facilities.
-    \end{block}
+\frametitle{Inspiration}
 	\begin{figure}
 		\centering
-		\includegraphics[width=0.6\linewidth]{lanl-fuel-cycle.png}
-		\caption{Example fuel cycle\ref{2011_zhou}.}
-	\end{figure}
-\end{frame}
-
-\begin{frame}
-\frametitle{Why Cyclus?}
-	Cyclus allows the construction of specific scenarios through the addition of archetypes. These archetypes are
-	modular and the transactions can be tracked.
-	\begin{figure}
-		\centering
-		\includegraphics[width=0.9\linewidth]{cyclus-material-track}
-		\caption{Cyclus tracks material flow through the fuel cycle.}
-		\label{fig:tracking}
+		\includegraphics[width=0.9\linewidth]{borrelli-citation.png}
 	\end{figure}
 \end{frame}
 
 \begin{frame}
 \frametitle{Assumptions}
 \begin{columns}
-	\begin{column}{.45\textwidth}
+	\begin{column}{.55\textwidth}
 		\begin{block}{Cyclus Requirements} 
 			\begin{itemize}
 				\item Modular.
@@ -67,7 +50,7 @@
 			\end{itemize}
 		\end{block}
 	\end{column}
-	\begin{column}{.55\textwidth}
+	\begin{column}{.45\textwidth}
 		\begin{figure}
 			\centering
 			\includegraphics[width=0.9\linewidth]{cyclus}
@@ -82,7 +65,7 @@
 		\begin{figure} 
 			\centering
 			\includegraphics[width=0.9\linewidth]{volox}
-			\caption{Voloxidation material balance area \ref{jupin}.}
+			\caption{Voloxidation material balance area \cite{jubin_spent_2009}.}
 			\label{fig:volox}
 		\end{figure}
 \end{frame}
@@ -91,7 +74,7 @@
 		\begin{figure} 
 			\centering
 			\includegraphics[width=0.9\linewidth]{reduction}
-			\caption{Reduction material balance area \ref{kaeri}.}
+			\caption{Reduction material balance area \cite{lee_advanced_2008}.}
 			\label{fig:reduction}
 		\end{figure}
 \end{frame}
@@ -99,8 +82,8 @@
 \frametitle{Subprocesses - Electrorefining}
 		\begin{figure}
 			\centering
-			\includegraphics[width=0.9\linewidth]{refining}
-			\caption{Refining material balance area \ref{kaeri}.}
+			\includegraphics[width=0.85\linewidth]{refining}
+			\caption{Refining material balance area \cite{lee_advanced_2008}.}
 			\label{fig:refining}
 		\end{figure}
 \end{frame}
