--- a/pres/motivation.tex
+++ b/pres/motivation.tex
@@ -2,8 +2,8 @@
   \frametitle{Motivation}
   \begin{block}{Why model Pyroprocessing?}
   	\begin{itemize}
-  		\item No commercial plants.
   		\item Safeguard by design.
+  		\item Future fuel cycles.
   	\end{itemize}
   \end{block}
  \begin{block}{What is the goal?}
@@ -20,10 +20,26 @@ diversion algorithms.
 \end{frame}
 
 \begin{frame}
-  \frametitle{Diversion}
-        \begin{figure}
-        	\centering
-        	\includegraphics[width=0.9\linewidth]{diversion1}
-        	\caption{Diversion detection methods within Cyclus \ref{cyclus-dev}.}
-        \end{figure}
+\frametitle{Cyclus}
+\begin{block}{What is Cyclus?}
+	Cyclus is a modular agent based fuel cycle simulator for tracking commodity transactions
+	between facilities.
+\end{block}
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{lanl-fuel-cycle.png}
+	\caption{Example fuel cycle\cite{zhou_model_2011}.}
+\end{figure}
+\end{frame}
+
+\begin{frame}
+\frametitle{Why Cyclus?}
+Cyclus allows the construction of specific scenarios through the addition of archetypes. These archetypes are
+modular and the transactions can be tracked.
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.9\linewidth]{diversion1}
+		\caption{Diversion detection methods within Cyclus.}
+		\label{fig:diversion}
+	\end{figure}
 \end{frame}
