adds pyro background image

--- a/pres/arfc-pres.tex
+++ b/pres/arfc-pres.tex
@@ -34,12 +34,12 @@
 %I need some complimentary error funcitons... 
 \DeclareMathOperator{\erfc}{erfc}
 %page numbers
-\addtobeamertemplate{navigation symbols}{}{%
-	\usebeamerfont{footline}%
-	\usebeamercolor[fg]{footline}%
-	\hspace{1em}%
-	\insertframenumber/\inserttotalframenumber
-}
+%\addtobeamertemplate{navigation symbols}{}{%
+%	\usebeamerfont{footline}%
+%	\usebeamercolor[fg]{footline}%
+%	\hspace{1em}%
+%	\insertframenumber/\inserttotalframenumber
+%}
 \setbeamertemplate{footline}[frame number]
 \setbeamertemplate{caption}[numbered]
 %Those icons in the references are terrible looking
@@ -91,6 +91,8 @@
 \end{frame}
 }
 
+\section{Introduction}
+\input{intro}
 \section{Motivation}
 \input{motivation}
 \section{Methods}
