--- a/paper/volox.tex
+++ b/paper/volox.tex
@@ -8,10 +8,10 @@
             base/.style = {rectangle, rounded corners, draw=black,
                            minimum width=3cm, minimum height=1cm,
                            text centered, font=\sffamily},
-       bluebox/.style = {base, fill=gray!15}, %blue!30
-       redbox/.style = {base, fill=white!30}, %red
-       greenbox/.style = {base, fill=white!30}, %green
-       process/.style = {base, minimum width=2.5cm, fill=gray!30, %orange!15
+       bluebox/.style = {base, fill=blue!30}, %blue!30 - gray!15
+       redbox/.style = {base, fill=red!30}, %red - white!30
+       greenbox/.style = {base, fill=green!30}, %green - white!30
+       process/.style = {base, minimum width=2.5cm, fill=orange!15, %orange!15 - gray!30
                            font=\ttfamily},
 }
 % Drawing part, node distance is 1.5 cm and every node
